--- a/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
+++ b/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
@@ -54,10 +54,10 @@
                                 <td>2024-01-25</td>
                                 <td>2024-01-28</td>
                                 <td>
-                                    <button class="btn btn-sm btn-outline-primary me-1">
+                                    <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
                                         <i class="bi bi-pencil"></i> Edit
                                     </button>
-                                    <button class="btn btn-sm btn-outline-danger">
+                                    <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
                                         <i class="bi bi-trash"></i> Delete
                                     </button>
                                 </td>
@@ -71,10 +71,10 @@
                                     <td>@row["Created"]</td>
                                     <td>@row["Modified"]</td>
                                     <td>
-                                        <button class="btn btn-sm btn-outline-primary me-1">
+                                        <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
                                             <i class="bi bi-pencil"></i> Edit
                                         </button>
-                                        <button class="btn btn-sm btn-outline-danger">
+                                        <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
                                             <i class="bi bi-trash"></i> Delete
                                         </button>
                                     </td>
