--- a/Quiz_Management/Views/Quiz/QuizList.cshtml
+++ b/Quiz_Management/Views/Quiz/QuizList.cshtml
@@ -61,8 +61,8 @@
                                 <td>2024-01-28</td>
                                 <td>2024-01-28</td>
                                 <td>
-                                    <button class="btn btn-sm btn-outline-primary me-1">Edit</button>
-                                    <button class="btn btn-sm btn-outline-danger">Delete</button>
+                                    <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">Edit</button>
+                                    <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">Delete</button>
                                 </td>
                             </tr>
 
@@ -77,8 +77,8 @@
                                     <td>@row["Created"]</td>
                                     <td>@row["Modified"]</td>
                                     <td>
-                                        <button class="btn btn-sm btn-outline-primary me-1">Edit</button>
-                                        <button class="btn btn-sm btn-outline-danger">Delete</button>
+                                        <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">Edit</button>
+                                        <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">Delete</button>
                                     </td>
                                 </tr>
                             }
