--- a/Quiz_Management/Views/Shared/_Layout.cshtml
+++ b/Quiz_Management/Views/Shared/_Layout.cshtml
@@ -435,7 +435,7 @@
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by Thummar jainil BootstrapMade format</a>
         </div>
     </footer><!-- End Footer -->
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
@@ -451,5 +451,8 @@
     <script src="~/assets/js/main.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 </body>
 </html>
