--- a/Quiz_Management/Views/Question/QuestionList.cshtml
+++ b/Quiz_Management/Views/Question/QuestionList.cshtml
@@ -2,8 +2,9 @@
 @using System.Data
 <main id="main" class="main">
     <div class="container-fluid">
+        <h2 style="color:steelblue" class="card-title fs-2">Question List</h2>
         <!-- Search Section -->
-        <div class="row mb-4">
+        <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
