--- a/Quiz_Management/Views/Quiz/QuizList.cshtml
+++ b/Quiz_Management/Views/Quiz/QuizList.cshtml
@@ -3,6 +3,7 @@
 
 <main id="main" class="main">
     <div class="container-fluid">
+        <h2 style="color:steelblue" class="card-title fs-2">Quiz List</h2>
         <!-- Search Section -->
         <div class="card mb-4">
             <div class="card-body">
@@ -27,8 +28,8 @@
         <!-- Table Section -->
         <div class="card">
             <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <di class=" m-3">
+                <div class="d-flex justify-content-between align-items-center">
+                    <di class="m-3">
                         <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="Quiz" asp-action="QuizAdd">+ Add Quiz </a>
                     </di>
                     <form class="d-flex">
@@ -57,7 +58,7 @@
                                 <td>General Knowledge Qui</td>
                                 <td>20</td>
                                 <td>2024-01-15</td>
-                                <td>1001</td>
+                                <td>abc</td>
                                 <td>2024-01-28</td>
                                 <td>2024-01-28</td>
                                 <td>
@@ -66,21 +67,25 @@
                                 </td>
                             </tr>
 
-                            @foreach (DataRow row in Model.Rows)
-                            {
-                                <tr>
-                                    <td>@row["QuizID"]</td>
-                                    <td>@row["QuizName"]</td>
-                                    <td>@row["TotalQuestions"]</td>
-                                    <td>@row["QuizDate"]</td>
-                                    <td>@row["UserName"]</td>
-                                    <td>@row["Created"]</td>
-                                    <td>@row["Modified"]</td>
-                                    <td>
-                                        <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">Edit</button>
-                                        <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">Delete</button>
-                                    </td>
-                                </tr>
+                            @{
+                                int i = 1;
+                                foreach (DataRow row in Model.Rows)
+                                {
+                                    <tr>
+                                        <td>@i</td>
+                                        <td>@row["QuizName"]</td>
+                                        <td>@row["TotalQuestions"]</td>
+                                        <td>@row["QuizDate"]</td>
+                                        <td>@row["UserName"]</td>
+                                        <td>@row["Created"]</td>
+                                        <td>@row["Modified"]</td>
+                                        <td>
+                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">Edit</a>
+                                            <a style="width:100px" class="btn btn-sm btn-outline-danger mt-1">Delete</a>
+                                        </td>
+                                    </tr>
+                                    i = i + 1;
+                                }
                             }
                         </tbody>
                     </table>
