--- a/Quiz_Management/Views/QuizWiseQuestion/AddQuizWiseQuestion.cshtml
+++ b/Quiz_Management/Views/QuizWiseQuestion/AddQuizWiseQuestion.cshtml
@@ -1,19 +1,20 @@
 ﻿<main id="main" class="main">
-    <div class="container mt-4">
+    <div class="container-fluid">
+        <h2 style="color:steelblue" class="card-title fs-2">Quiz Wise Questions Add/Edit</h2>
         <div class="card">
             <div class="card-body">
                 <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb m-3">
-                        <li class="breadcrumb-item">Quiz Wise Questions</li>
+                    <ol class="breadcrumb mt-3">
+                        <li class="breadcrumb-item">
+                            <a asp-controller="QuizWiseQuestion" asp-action="QuizWiseQuestionList">Quiz Wise Questions</a>
+                        </li>
                         <li class="breadcrumb-item active">Quiz Wise Questions Add</li>
                     </ol>
                 </nav>
-
-                <h5 class="card-title mb-4">Quiz Wise Questions Add/Edit</h5>
-
                 <form>
 
                     <div class="mb-3">
+                        <span class="text-danger">*</span>
                         <label for="quizId" class="form-label">Quiz ID</label>
                         <select class="form-select" id="quizId" required>
                             <option value="">Select Quiz</option>
@@ -24,6 +25,7 @@
                     </div>
 
                     <div class="mb-3">
+                        <span class="text-danger">*</span>
                         <label for="questionId" class="form-label">Question ID</label>
                         <select class="form-select" id="questionId" required>
                             <option value="">Select Question</option>
@@ -34,6 +36,7 @@
                     </div>
 
                     <div class="mb-3">
+                        <span class="text-danger">*</span>
                         <label for="userId" class="form-label">User ID</label>
                         <input type="text" class="form-control" id="userId" required>
                     </div>
