--- a/Quiz_Management/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
+++ b/Quiz_Management/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
@@ -2,8 +2,9 @@
 @using System.Data
 <main id="main" class="main">
     <div class="container-fluid">
+        <h2 style="color:steelblue" class="card-title fs-2">Quiz Wise Question List</h2>
         <!-- Search Section -->
-        <div class="row mb-4">
+        <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -30,7 +31,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div>
-                        <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">+ Add Quiz Question</a>
+                        <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">+ Add Quiz wise Question</a>
                     </div>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
@@ -41,47 +42,35 @@
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>QuizWiseQuestions ID</th>
-                                <th>Quiz ID</th>
-                                <th>Quiz Name</th>
+                                <th>QuizWiseQuestions ID</th>                                <th>Quiz Name</th>
                                 <th>Question ID</th>
-                                <th>Question Name</th>
+                                <th>Question Text</th>
+                                <th>User Name</th>
                                 <th>Created</th>
                                 <th>Modified</th>
                                 <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>101</td>
-                                <td>201</td>
-                                <td>2024-01-25</td>
-                                <td>2024-01-28</td>
-                                <td>
-                                    <button class="btn btn-sm btn-outline-primary me-1">
-                                        <i class="bi bi-pencil"></i> Edit
-                                    </button>
-                                    <button class="btn btn-sm btn-outline-danger">
-                                        <i class="bi bi-trash"></i> Delete
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>101</td>
-                                <td>202</td>
-                                <td>2024-01-25</td>
-                                <td>2024-01-27</td>
-                                <td>
-                                    <button class="btn btn-sm btn-outline-primary me-1">
-                                        <i class="bi bi-pencil"></i> Edit
-                                    </button>
-                                    <button class="btn btn-sm btn-outline-danger">
-                                        <i class="bi bi-trash"></i> Delete
-                                    </button>
-                                </td>
-                            </tr>
+                            @foreach(DataRow row in Model.Rows){
+                                <tr>
+                                    <td>@row["QuizWiseQuestionsID"]</td>
+                                    <td>@row["QuizName"]</td>
+                                    <td>@row["QuestionID"]</td>
+                                    <td>@row["QuestionText"]</td>
+                                    <td>@row["UserName"]</td>
+                                    <td>@row["Created"]</td>
+                                    <td>@row["Modified"]</td>
+                                    <td>
+                                        <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
+                                            <i class="bi bi-pencil"></i> Edit
+                                        </button>
+                                        <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
+                                            <i class="bi bi-trash"></i> Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
