--- a/Quiz_Management/Views/Shared/_Layout.cshtml
+++ b/Quiz_Management/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <a href="index.html" class="logo d-flex align-items-center">
                 <img src="~/assets/img/logo.png" alt="">
-                <span class="d-none d-lg-block">NiceAdmin</span>
+                <span class="d-none d-lg-block">Quiz Management</span>
             </a>
             <i class="bi bi-list toggle-sidebar-btn"></i>
         </div><!-- End Logo -->
@@ -312,17 +312,17 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#QuestionLevel-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-bar-chart"></i><span>QuestionLevel</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <i class="bi bi-bar-chart"></i><span>Question Level</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="QuestionLevel-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a asp-area="" asp-controller="QuestionLevel" asp-action="QuestionLevelList">
-                            <i class="bi bi-circle"></i><span>QuestionLevel List</span>
+                            <i class="bi bi-circle"></i><span>Question Level List</span>
                         </a>
                     </li>
                     <li>
                         <a asp-area="" asp-controller="QuestionLevel" asp-action="AddQuestionLevel">
-                            <i class="bi bi-circle"></i><span>Add QuestionLevel</span>
+                            <i class="bi bi-circle"></i><span>Add Question Level</span>
                         </a>
                     </li>
                 </ul>
@@ -330,17 +330,17 @@
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#QuizWiseQuestion-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-layout-text-window-reverse"></i><span>QuizWiseQuestion</span><i class="bi bi-chevron-down ms-auto"></i>
+                    <i class="bi bi-layout-text-window-reverse"></i><span>Quiz Wise Question</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                 <ul id="QuizWiseQuestion-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
                         <a asp-area="" asp-controller="QuizWiseQuestion" asp-action="QuizWiseQuestionList">
-                            <i class="bi bi-circle"></i><span>QuizWiseQuestion List</span>
+                            <i class="bi bi-circle"></i><span>Quiz Wise Question List</span>
                         </a>
                     </li>
                     <li>
                         <a asp-area="" asp-controller="QuizWiseQuestion" asp-action="AddQuizWiseQuestion">
-                            <i class="bi bi-circle"></i><span>Add QuizWiseQuestion</span>
+                            <i class="bi bi-circle"></i><span>Add Quiz Wise Question</span>
                         </a>
                     </li>
                 </ul>
