--- a/Quiz_Management/Views/User/AddUsers.cshtml
+++ b/Quiz_Management/Views/User/AddUsers.cshtml
@@ -1,35 +1,59 @@
-﻿<main id="main" class="main">
-    <div class="container mt-4">
+﻿@model Quiz_Management.Models.UserModel
+<main id="main" class="main">
+    <div class="container-fluid">
+        <h2 style="color:steelblue" class="card-title fs-2">User Add/Edit</h2>
         <div class="card m-2">
             <div class="card-body">
-                <nav aria-label="breadcrumb" class="m-3">
+                <nav aria-label="breadcrumb" class="my-3">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item">User</li>
+                        <li class="breadcrumb-item">
+                            <a asp-controller="User" asp-action="UserList">User</a>
+                        </li>
                         <li class="breadcrumb-item active">User Add</li>
                     </ol>
                 </nav>
 
-                <h5 class="card-title mb-4">User Add/Edit</h5>
-
                 <form>
                     <div class="mb-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" required>
+                        <span class="text-danger">*</span>
+                        <label class="form-label">Username</label>
+                        <input asp-for="UserName" type="text" class="form-control">
+                        <span asp-validation-for="UserName" class="text text-danger"></span>
                     </div>
 
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" required>
+                        <span class="text-danger">*</span>
+                        <label class="form-label">Email</label>
+                        <input asp-for="Email" UserName"Name" type="email" class="form-control">
+                        <span asp-validation-for="Email" class="text text-danger"></span>
                     </div>
 
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" required>
+                        <span class="text-danger">*</span>
+                        <label class="form-label">Password</label>
+                        <input asp-for="Password" type="password" class="form-control">
+                        <span asp-validation-for="Password" class="text text-danger"></span>
                     </div>
 
                     <div class="mb-3">
-                        <label for="modified" class="form-label">Modified</label>
-                        <input type="date" class="form-control" id="modified" readonly>
+                        <span class="text-danger">*</span>
+                        <label class="form-label">Is Active(only 1 or 0)</label>
+                        <input asp-for="IsActive" type="number" class="form-control">
+                        <span asp-validation-for="IsActive" class="text text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <span class="text-danger">*</span>
+                        <label class="form-label">Is Admin(only 1 or 0)</label>
+                        <input asp-for="IsAdmin" type="number" class="form-control">
+                        <span asp-validation-for="IsAdmin" class="text text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <span class="text-danger">*</span>
+                        <label class="form-label">Mobile</label>
+                        <input asp-for="Mobile" type="text" class="form-control">
+                        <span asp-validation-for="Mobile" class="text text-danger"></span>
                     </div>
 
                     <div class="mt-4">
