--- a/Quiz_Management/Views/User/UserList.cshtml
+++ b/Quiz_Management/Views/User/UserList.cshtml
@@ -31,14 +31,18 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div>
-                        <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="User" asp-action="AddUsers">+ Add User</a>
+                        <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="User" asp-action="AddEditUsers">+ Add User</a>
                     </div>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
                     </form>
-
                 </div>
-
+                @if (TempData["ErrorMessage"] != null)
+                {
+                    <div class="alert alert-danger">
+                        @TempData["ErrorMessage"]
+                    </div>
+                }
                 <div class="table-responsive">
                     <table class="table table-striped table-hover">
                         <thead>
@@ -54,24 +58,32 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach(DataRow row in Model.Rows){
-                                <tr>
-                                    <td>@row["UserID"]</td>
-                                    <td>@row["UserName"]</td>
-                                    <td>@row["Email"]</td>
-                                    <td>@row["Password"]</td>
-                                    <td>@row["Mobile"]</td>
-                                    <td>@row["Created"]</td>
-                                    <td>@row["Modified"]</td>
-                                    <td>
-                                        <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
-                                            <i class="bi bi-pencil"></i> Edit
-                                        </button>
-                                        <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
-                                            <i class="bi bi-trash"></i> Delete
-                                        </button>
-                                    </td>
-                                </tr>
+                            @{
+                                int i=1;
+                                foreach (DataRow row in Model.Rows)
+                                {
+                                    <tr>
+                                        <td>@i</td>
+                                        <td>@row["UserName"]</td>
+                                        <td>@row["Email"]</td>
+                                        <td>@row["Password"]</td>
+                                        <td>@row["Mobile"]</td>
+                                        <td>@row["Created"]</td>
+                                        <td>@row["Modified"]</td>
+                                        <td>
+                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="User" asp-action="AddEditUsers" asp-route-UserID="@row["UserID"]">
+                                                <i class="bi bi-pencil"></i> Edit
+                                            </a>
+                                            <form method="post" asp-controller="User" asp-action="DeleteUser" onsubmit="return confirmDelete()">
+                                                <input type="hidden" name="UserID" value="@row["UserID"]" />
+                                                <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
+                                                    <i class=" bi bi-trash3"> Delete</i>
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                    i = i + 1;
+                                }
                             }
                         </tbody>
                     </table>
