--- a/Quiz_Management/Views/User/UserList.cshtml
+++ b/Quiz_Management/Views/User/UserList.cshtml
@@ -31,7 +31,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div>
-                        <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="User" asp-action="AddEditUsers">+ Add User</a>
+                        <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="User" asp-action="AddEditUser">+ Add User</a>
                     </div>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
