--- a/Quiz_Management/Views/Shared/_Layout.cshtml
+++ b/Quiz_Management/Views/Shared/_Layout.cshtml
@@ -285,7 +285,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="" asp-controller="Quiz" asp-action="QuizAdd">
+                        <a asp-area="" asp-controller="Quiz" asp-action="QuizAddEdit">
                             <i class="bi bi-circle"></i><span>Add Quiz</span>
                         </a>
                     </li>
