--- a/Quiz_Management/Views/User/UserList.cshtml
+++ b/Quiz_Management/Views/User/UserList.cshtml
@@ -71,7 +71,7 @@
                                         <td>@row["Created"]</td>
                                         <td>@row["Modified"]</td>
                                         <td>
-                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="User" asp-action="AddEditUsers" asp-route-UserID="@row["UserID"]">
+                                            <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="User" asp-action="AddEditUser" asp-route-UserID="@row["UserID"]">
                                                 <i class="bi bi-pencil"></i> Edit
                                             </a>
                                             <form method="post" asp-controller="User" asp-action="DeleteUser" onsubmit="return confirmDelete()">
