--- a/Quiz_Management/Views/Quiz/QuizAddEdit.cshtml
+++ b/Quiz_Management/Views/Quiz/QuizAddEdit.cshtml
@@ -24,21 +24,21 @@
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Total Questions</label>
-                        <input asp-for="TotalQuestions" class="form-control" id="totalQuestions">
+                        <input asp-for="TotalQuestions" class="form-control">
                         <span asp-validation-for="TotalQuestions" class="text text-danger "></span>
                     </div>
 
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">Quiz Date</label>
-                        <input asp-for="QuizDate" class="form-control" id="quizDate">
+                        <input asp-for="QuizDate" class="form-control">
                         <span asp-validation-for="QuizDate" class="text text-danger "></span>
                     </div>
 
                     <div class="mb-3">
                         <span class="text-danger">*</span>
                         <label class="form-label">User ID</label>
-                        <input asp-for="UserID" class="form-control" id="userId">
+                        <input asp-for="UserID" class="form-control">
                         <span asp-validation-for="UserID" class="text text-danger "></span>
                     </div>
 
