--- a/Quiz_Management/Views/Shared/_Layout.cshtml
+++ b/Quiz_Management/Views/Shared/_Layout.cshtml
@@ -303,7 +303,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="" asp-controller="Question" asp-action="AddQuestion">
+                        <a asp-area="" asp-controller="Question" asp-action="AddEditQuestion">
                             <i class="bi bi-circle"></i><span>Add Question</span>
                         </a>
                     </li>
@@ -321,7 +321,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="" asp-controller="QuestionLevel" asp-action="AddQuestionLevel">
+                        <a asp-area="" asp-controller="QuestionLevel" asp-action="AddEditQuestionLevel">
                             <i class="bi bi-circle"></i><span>Add Question Level</span>
                         </a>
                     </li>
