--- a/Quiz_Management/Views/Question/QuestionList.cshtml
+++ b/Quiz_Management/Views/Question/QuestionList.cshtml
@@ -36,7 +36,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div>
-                        <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="Question" asp-action="AddQuestion">+ Add Question</a>
+                        <a class="btn btn-primary btn-sm px-4 py-2" asp-area="" asp-controller="Question" asp-action="AddEditQuestion">+ Add Question</a>
                     </div>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
