--- a/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
+++ b/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center my-3">
                     <div>
-                        <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuestionLevel" asp-action="AddQuestionLevel">+ Add Question Level</a>
+                        <a class="btn btn-primary btn-sm px-4 py-2" asp-controller="QuestionLevel" asp-action="AddEditQuestionLevel">+ Add Question Level</a>
                     </div>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
@@ -48,21 +48,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Beginner</td>
-                                <td>smit</td>
-                                <td>2024-01-25</td>
-                                <td>2024-01-28</td>
-                                <td>
-                                    <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
-                                        <i class="bi bi-pencil"></i> Edit
-                                    </button>
-                                    <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
-                                        <i class="bi bi-trash"></i> Delete
-                                    </button>
-                                </td>
-                            </tr>
                             @foreach (DataRow row in Model.Rows)
                             {
                                 <tr>
@@ -72,12 +57,15 @@
                                     <td>@row["Created"]</td>
                                     <td>@row["Modified"]</td>
                                     <td>
-                                        <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
+                                        <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="QuestionLevel" asp-action="AddEditQuestionLevel" asp-route-QuestionLevelID="@row["QuestionLevelID"]">
                                             <i class="bi bi-pencil"></i> Edit
-                                        </button>
-                                        <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
-                                            <i class="bi bi-trash"></i> Delete
-                                        </button>
+                                        </a>
+                                        <form method="post" asp-controller="QuestionLevel" asp-action="DeleteQuestionLevel" onsubmit="return confirmDelete()">
+                                            <input type="hidden" name="QuestionLevelID" value="@row["QuestionLevelID"]" />
+                                            <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
+                                                <i class=" bi bi-trash3"> Delete</i>
+                                            </button>
+                                        </form>
                                     </td>
                                 </tr>
                             }
