--- a/Quiz_Management/Views/Quiz/QuizList.cshtml
+++ b/Quiz_Management/Views/Quiz/QuizList.cshtml
@@ -104,3 +104,8 @@
         </div>
     </div>
 </main>
+<script>
+    function confirmDelete() {
+        return confirm("Are you Sure! You want to Delete this record from Quiz-table?")
+    }
+</script>
