--- a/Quiz_Management/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
+++ b/Quiz_Management/Views/QuizWiseQuestion/QuizWiseQuestionList.cshtml
@@ -95,3 +95,8 @@
         </div>
     </div>
 </main>
+<script>
+    function confirmDelete() {
+        return confirm("Are you Sure! You want to Delete this record from Quiz Wise Question-table?")
+    }
+</script>
