--- a/Quiz_Management/Views/User/UserList.cshtml
+++ b/Quiz_Management/Views/User/UserList.cshtml
@@ -109,3 +109,8 @@
         </div>
     </div>
 </main>
+<script>
+    function confirmDelete() {
+        return confirm("Are you Sure! You want to Delete this record from user-table")
+    }
+</script>
