--- a/Quiz_Management/Views/Question/QuestionList.cshtml
+++ b/Quiz_Management/Views/Question/QuestionList.cshtml
@@ -61,31 +61,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td align="center">1</td>
-                                <td>What is the capital of France?</td>
-                                <td align="center">1</td>
-                                <td>
-                                    A) Paris<br>
-                                    B) London<br>
-                                    C) Berlin<br>
-                                    D) Madrid
-                                </td>
-                                <td align="center">A</td>
-                                <td align="center">5</td>
-                                <td align="center">1</td>
-                                <td>abcd</td>
-                                <td>2024-01-28</td>
-                                <td>2024-01-20</td>
-                                <td>
-                                    <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
-                                        <i class="bi bi-pencil"></i> Edit
-                                    </button>
-                                    <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
-                                        <i class="bi bi-trash"></i> Delete
-                                    </button>
-                                </td>
-                            </tr>
                             @foreach(DataRow row in Model.Rows){
                             <td align="center">@row["QuestionID"]</td>
                             <td>@row["QuestionText"]</td>
@@ -98,12 +73,15 @@
                             <td>@row["Created"]</td>
                             <td>@row["Modified"]</td>
                             <td>
-                                <button style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1">
+                                <a style="width:100px" class="btn btn-sm btn-outline-primary me-1 mt-1" asp-controller="Question" asp-action="AddEditQuestion" asp-route-QuestionID="@row["QuestionID"]">
                                     <i class="bi bi-pencil"></i> Edit
-                                </button>
-                                <button style="width:100px" class="btn btn-sm btn-outline-danger mt-1">
-                                    <i class="bi bi-trash"></i> Delete
-                                </button>
+                                </a>
+                                <form method="post" asp-controller="Question" asp-action="DeleteQuestion" onsubmit="return confirmDelete()">
+                                    <input type="hidden" name="QuestionID" value="@row["QuestionID"]" />
+                                    <button style="width:100px" type="submit" class="btn btn-outline-danger btn-xs mt-1">
+                                        <i class=" bi bi-trash3"> Delete</i>
+                                    </button>
+                                </form>
                             </td>
                             }
                         </tbody>
@@ -130,3 +108,8 @@
         </div>
     </div>
 </main>
+<script>
+    function confirmDelete() {
+        return confirm("Are you Sure! You want to Delete this record from Question-table?")
+    }
+</script>
