--- a/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
+++ b/Quiz_Management/Views/QuestionLevel/QuestionLevelList.cshtml
@@ -93,3 +93,8 @@
         </div>
     </div>
 </main>
+<script>
+    function confirmDelete() {
+        return confirm("Are you Sure! You want to Delete this record from Question level-table?")
+    }
+</script>
